# MTPLX-codex

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LOG.md  MANIFEST.in  NOTICE  PRO_AGENT_PREFILL_REVIEW_PACKET_2026-05-07.md  README.md  RUN_NOTES.md  SECURITY.md  TROUBLESHOOTING.md  pyproject.toml  serve-mtplx-web.sh  serve-webui.sh  tune.sh
.github/: CODEOWNERS  PR_DESCRIPTION.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark_regression.yml  bug_report.yml  feature_request.yml  model_compatibility.yml
.github/workflows/: build.yml  ci.yml  hygiene.yml  release.yml
benchmarks/results/: README.md  auto-policy-m5max-128k.json  auto-policy-m5max-64k.json  auto-policy-repage-chunk4096-m5max-128k.json  ceiling-dense-decode-128k-chunk4096-no-defer.json  ceiling-dense-decode-128k-chunk4096.json  ceiling-dense-decode-64k-chunk4096-no-defer.json  ceiling-dense-decode-64k-chunk4096.json  ceiling-dense-decode-64k-chunk7168.json  ceiling-dense-decode-64k-chunk8192.json  ceiling-dense-decode-64k.json  depth2-auto-policy-m5max-64k.json  prefill-deferred-hidden-m5max-64k.json  prefill-diagnostic-m5max-local-128k-optimized-speed-sustained-auto-profile-layout-ar.json  prefill-fixed-m5max-local-0p5k-32k-optimized-speed-sustained-auto-profile-layout-mtp.json  prefill-fixed-m5max-local-128k-optimized-speed-sustained-auto-dense-decode-mtp.json  prefill-fixed-m5max-local-128k-optimized-speed-sustained-auto-profile-layout-mtp.json  prefill-fixed-m5max-local-64k-optimized-speed-sustained-auto-dense-decode-mtp.json  (+1 more)
docs/: PYPI_RELEASE.md  README.md  api.md  architecture.md  architectures.md  benchmarks.md  development.md  install.md  model-compatibility.md  profiles.md  quickstart.md  runtime-contract.md  server.md  troubleshooting.md
examples/: benchmark-flappy.sh  cli-chat.sh  curl-chat-completions.sh  openai-python-client.py  openwebui.md  run-one-shot.sh
mtplx/: __init__.py  adaptive.py  artifacts.py  attention_context.py  attention_split.py  block_attention.py  cache_state.py  cli.py  config.py  constants.py  deepseek_mtp_patch.py  default_models.py  diagnostics.py  draft_lm_head.py  draft_sampling.py  engine_session.py  env.py  errors.py  fast_sampling.py  gdn_capture.py  generation.py  glm_mtp_patch.py  graphbank.py  hardware.py  hf_loader.py  mimo_mtp_patch.py  mtp_adapters.py  mtp_patch.py  native_mlp.py  nemotron_h_mtp_patch.py  pi.py  prefill_bench.py  profiles.py  proposal_reranker.py  runtime.py  sampling.py  session_bank.py  swival.py  thermal.py  trace_parity.py  (+3 more)
scripts/: aime_shape_memory_bench.py  fresh_venv_smoke.sh  hygiene_scan.sh  install_preview_global.sh  phase0h_paged_verifier_exactness.py  probe_mx_compile_buckets.py  run_context_degradation_diagnostics.py  serve_openai_mtplx.py
tests/: test_adaptive.py  test_artifacts.py  test_attention_split.py  test_cache_state.py  test_config.py  test_context_degradation_profiles.py  test_correctors.py  test_default_models.py  test_diagnostics.py  test_engine_session_env.py  test_generation_sustained.py  test_hf_loader.py  test_idle_postcommit_subagent.py  test_metal_memory_caps.py  test_mtp_depth_sweep.py  test_mtp_patch.py  test_no_mlx_imports.py  test_onboarding.py  test_openai_bridge.py  test_phase0h_paged_verifier_exactness.py  test_policy_fingerprint_stability.py  test_postcommit_prefix_reuse.py  test_postcommit_tools_plumbing.py  test_postcommit_wait.py  test_postcommit_wait_integration.py  test_prefill_bench.py  test_prefill_chunk_defaults.py  test_prefill_tps_regression.py  test_profiles.py  test_prompt_encoding.py  test_public_cli.py  test_runtime_kpis.py  test_sampling.py  test_server_openai.py  test_session_bank.py  test_sustained_long_context_qa.py  test_thermal.py  test_tool_aware_stream_translator.py  test_trace_parity.py  test_validators.py  (+2 more)
vllm_metal/: __init__.py
(+99 files in other folders)
